crates/ace-macros/tests/compile_fail/struct_read_all_length.stderr
error: field `data`: `read_all` and `length` are mutually exclusive
 --> tests/compile_fail/struct_read_all_length.rs:3:10
  |
3 | #[derive(FrameRead)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FrameRead` (in Nightly builds, run with -Z macro-backtrace for more info)
